abstract document creator for reuse in regulatory statements

--- a/app/components/document-creator.hbs
+++ b/app/components/document-creator.hbs
@@ -17,7 +17,7 @@
     invalidTemplate=this.invalidTemplate
     updateTitle=this.updateTitle
     selectedTemplate=this.template
-    options=this.templateOptions
+    options=@templateOptions
     onSelectTemplate=this.onSelectTemplate
     )
     create=this.create
