--- a/app/templates/inbox/regulatory-statements.hbs
+++ b/app/templates/inbox/regulatory-statements.hbs
@@ -13,7 +13,7 @@
         <AuToolbarGroup class="au-c-toolbar__group--center">
           <AuInput @icon="search" @iconAlignment="right" @value={{this.searchValue}} placeholder={{t 'inbox.regulatoryStatements.searchPlaceholder'}} />
           {{#unless this.readOnly}}
-            <AuButton {{on "click" (fn (mut this.displayCreateModal) true)}} @skin="primary" @icon="add" @iconAlignment="left">{{t "inbox.regulatoryStatements.new.title"}}</AuButton>
+            <AuLink @route="inbox.regulatory-statements.new" @skin="button" @icon="add" @iconAlignment="left">{{t "inbox.regulatoryStatements.new.title"}}</AuLink>
           {{/unless}}
         </AuToolbarGroup>
       </AuToolbar>
@@ -27,7 +27,7 @@
     <c.body as |container|>
       {{#let container.currentVersion as |row|}}
         <td>
-          <AuLink @route="regulatory-statements.edit" @model={{row.id}}>{{row.currentVersion.title}}</AuLink>
+          <AuLink @route="regulatory-statements.edit" @model={{row.id}}>{{row.title}}</AuLink>
         </td>
         <td>
           {{human-friendly-date row.updatedOn}}
@@ -38,52 +38,3 @@
   </table.content>
 </AuDataTable>
 {{outlet}}
-
-<AuModal
-  @title="Nieuwe reglementaire bijlage"
-  @modalOpen={{this.displayCreateModal}}
-  @closeModal={{fn (mut this.displayCreateModal) false}}
-  as |Modal|
->
-  <Modal.Body>
-    <form class="au-c-form">
-      <AuFormRow @alignment="default">
-        <AuLabel for="title" @required={{true}}>
-          Titel
-        </AuLabel>
-        <AuTextarea id="title" @width="block" />
-      </AuFormRow>
-      <AuFormRow @alignment="default">
-        <AuLabel for="template" @required={{true}}>
-          Sjabloon
-        </AuLabel>
-        <select id="template" class="au-c-select">
-          <option value=""></option>
-          <option value="0">Vrije tekst</option>
-          <option value="1">Template 1</option>
-          <option value="2">Template 2</option>
-        </select>
-      </AuFormRow>
-      {{!-- <AuFormRow @alignment="default">
-        <AuLabel for="type" @required={{true}}>
-          Type
-        </AuLabel>
-        <select id="type" class="au-c-select">
-          <option value="0"></option>
-          <option value="1">Type 1</option>
-          <option value="2">Type 2</option>
-        </select>
-      </AuFormRow> --}}
-    </form>
-  </Modal.Body>
-  <Modal.Footer>
-    <AuButtonGroup>
-      <AuLink  @route="regulatory-statements.edit" @skin="button" {{on "click" (fn (mut this.displayCreateModal) false)}}>
-        {{t "inbox.agendapoints.new.create"}}
-      </AuLink>
-      <AuButton @skin="secondary" {{on "click" (fn (mut this.displayCreateModal) false)}}>
-        {{t "inbox.agendapoints.new.cancel"}}
-      </AuButton>
-    </AuButtonGroup>
-  </Modal.Footer>
-</AuModal>
