--- a/app/components/agenda-manager/edit.hbs
+++ b/app/components/agenda-manager/edit.hbs
@@ -61,24 +61,24 @@
     </Modal.Body>
     <Modal.Footer>
       <AuToolbar>
-      <AuButtonGroup>
-        <Form.Submit>{{t "manageAgendaZittingModal.saveButton"}}</Form.Submit>
-        <AuButton @skin="secondary" {{on "click" this.cancel}} @disabled={{this.isSubmitting}}>
-          {{t "manageAgendaZittingModal.cancelButton"}}
-        </AuButton>
-      </AuButtonGroup>
-      {{#unless this.isNew}}
-        <AuButton
-          @alert={{true}}
-          @skin="tertiary"
-          @loading={{this.deleteTask.isRunning}}
-          @icon="bin"
-          @iconAlignment="left"
-          {{on "click" (perform this.deleteTask @itemToEdit)}}
-          @disabled={{this.isSubmitting}} >
-            {{t "manageAgendaZittingModalDelete.deleteButton"}}
-        </AuButton>
-      {{/unless}}
+        <AuButton @skin="naked" {{on "click" this.cancel}} @disabled={{this.isSubmitting}}>
+            {{t "manageAgendaZittingModal.cancelButton"}}
+          </AuButton>
+        <AuButtonGroup>
+          {{#unless this.isNew}}
+          <AuButton
+            @alert={{true}}
+            @skin="secondary"
+            @loading={{this.deleteTask.isRunning}}
+            @icon="bin"
+            @iconAlignment="left"
+            {{on "click" (perform this.deleteTask @itemToEdit)}}
+            @disabled={{this.isSubmitting}} >
+              {{t "manageAgendaZittingModalDelete.deleteButton"}}
+          </AuButton>
+          {{/unless}}
+          <Form.Submit>{{t "manageAgendaZittingModal.saveButton"}}</Form.Submit>
+        </AuButtonGroup>
       </AuToolbar>
     </Modal.Footer>
   </AuModal>
