--- a/app/components/treatment/voting/edit.hbs
+++ b/app/components/treatment/voting/edit.hbs
@@ -39,20 +39,24 @@
     </div>
   </Modal.Body>
   <Modal.Footer>
-    <AuButtonGroup>
-      <AuButton @loading={{@saving}} {{on "click" this.save}}>
-        {{t "votingEdit.saveButton"}}
-      </AuButton>
-      <AuButton @skin="secondary" {{on "click" this.cancel}}>
-        {{t "votingEdit.cancelButton"}}
-      </AuButton>
-    </AuButtonGroup>
-    <AuHelpText>
-      {{t "votingEdit.fourthStepExplanationPartOne"}}
-      <strong>
-        {{t "votingEdit.saveButton"}}
-      </strong>
-      {{t "votingEdit.fourthStepExplanationPartTwo"}}
-    </AuHelpText>
+    <AuToolbar as |Group|>
+      <Group>
+        <AuButton @skin="naked" {{on "click" this.cancel}}>
+          {{t "votingEdit.cancelButton"}}
+        </AuButton>
+      </Group>
+      <Group>
+        <AuHelpText>
+          {{t "votingEdit.fourthStepExplanationPartOne"}}
+          <strong>
+            {{t "votingEdit.saveButton"}}
+          </strong>
+          {{t "votingEdit.fourthStepExplanationPartTwo"}}
+        </AuHelpText>
+        <AuButton @loading={{@saving}} {{on "click" this.save}}>
+          {{t "votingEdit.saveButton"}}
+        </AuButton>
+      </Group>
+    </AuToolbar>
   </Modal.Footer>
 </AuModal>
