--- a/app/templates/meetings/edit/treatment.hbs
+++ b/app/templates/meetings/edit/treatment.hbs
@@ -1,9 +1,49 @@
 {{! No AuModal here, because at the moment, when a plugin in the editor opens a modal, the editor modal closes }}
-<div class="au-c-modal au-c-modal--flat is-visible au-c-modal--editor" role="dialog" aria-describedby="au-c-modal-title-" tabindex="-1">
+<div class="au-c-modal-backdrop is-visible"></div>
+<div class="au-c-modal au-c-modal--fullscreen is-visible au-c-modal--editor" role="dialog" aria-describedby="au-c-modal-title-" tabindex="-1">
   <div class="au-c-modal__header">
-    <h1 id="au-c-modal-title-" class="au-c-modal__title" tabindex="-1">
-      {{this.document.title}}
-    </h1>
+    <AuToolbar class="au-u-1-1" as |Group|>
+      <Group>
+        <h1 id="au-c-modal-title-" class="au-c-modal__title" tabindex="-1">
+          {{this.document.title}}
+        </h1>
+      </Group>
+      <Group>
+        {{#if (feature-flag 'attachments')}}
+          {{#if this.uploading}}
+            <AuButtonGroup @inline={{true}} role="tablist" aria-label="editor-tabs">
+              <AuButton class="au-u-margin-bottom-none" @skin="secondary" @icon="document" @iconAlignment="left" {{on "click" this.toggleUpload}} aria-selected="false" aria-controls="panel-1" id="tab-1" tabindex="0">
+                {{t "attachments.return"}}
+              </AuButton>
+              <AuButton class="au-u-margin-bottom-none is-active"  @skin="secondary" @icon="attachment" @iconAlignment="left" role="tab" aria-selected="true" aria-controls="panel-2" id="tab-2" tabindex="-1">
+                {{t "attachments.attachments"}}
+                (<strong>{{if this.documentContainer.attachments.length this.documentContainer.attachments.length 0}}</strong>)
+              </AuButton>
+            </AuButtonGroup>
+          {{else}}
+            <AuButtonGroup @inline={{true}} role="tablist" aria-label="editor-tabs">
+              <AuButton class="is-active au-u-margin-bottom-none" @skin="secondary" @icon="document" @iconAlignment="left" role="tab" aria-selected="true" aria-controls="panel-1" id="tab-1" tabindex="-1">
+                {{t "attachments.return"}}
+              </AuButton>
+              <AuButton class="au-u-margin-bottom-none has-tooltip" @skin="secondary" @icon="attachment" @iconAlignment="left" {{on "click" (perform this.toggleUploadAndSave)}} role="tab" aria-selected="false" aria-controls="panel-2" id="tab-2" tabindex="0">
+                {{t "attachments.attachments"}}
+                (<strong>{{if this.documentContainer.attachments.length this.documentContainer.attachments.length 0}}</strong>)
+                <span class="au-c-button__tooltip au-c-button__tooltip--bottom-right">{{t "attachments.saveAndGo"}}</span>
+              </AuButton>
+            </AuButtonGroup>
+          {{/if}}
+        {{/if}}
+      </Group>
+    </AuToolbar>
+    {{!-- <button
+      class="au-c-modal__close au-u-margin-left"
+      type="button"
+      disabled={{this.saveDocumentTask.isRunning}}
+       {{on "click" this.closeModal}}
+    >
+      <AuIcon @icon="cross" @size="large" />
+      <span class="au-u-hidden-visually">Venster sluiten</span>
+    </button> --}}
   </div>
   <div class="au-c-modal__body">
     {{#if this.documentContainer}}
@@ -23,42 +63,21 @@
     {{/if}}
   </div>
   <div class="au-c-modal__footer">
-    {{#if (feature-flag 'attachments')}}
-      {{#if this.uploading}}
-        <AuButtonGroup @inline={{true}} role="tablist" aria-label="editor-tabs">
-          <AuButton class="au-u-margin-bottom-none" @skin="secondary" @icon="document" @iconAlignment="left" {{on "click" this.toggleUpload}} aria-selected="false" aria-controls="panel-1" id="tab-1" tabindex="0">
-            {{t "attachments.return"}}
-          </AuButton>
-          <AuButton class="au-u-margin-bottom-none is-active"  @skin="secondary" @icon="attachment" @iconAlignment="left" role="tab" aria-selected="true" aria-controls="panel-2" id="tab-2" tabindex="-1">
-            {{t "attachments.attachments"}}
-            (<strong>{{if this.documentContainer.attachments.length this.documentContainer.attachments.length 0}}</strong>)
-          </AuButton>
-        </AuButtonGroup>
-      {{else}}
-        <AuButtonGroup @inline={{true}} role="tablist" aria-label="editor-tabs">
-          <AuButton class="is-active au-u-margin-bottom-none" @skin="secondary" @icon="document" @iconAlignment="left" role="tab" aria-selected="true" aria-controls="panel-1" id="tab-1" tabindex="-1">
-            {{t "attachments.return"}}
-          </AuButton>
-          <AuButton class="au-u-margin-bottom-none has-tooltip" @skin="secondary" @icon="attachment" @iconAlignment="left" {{on "click" (perform this.toggleUploadAndSave)}} role="tab" aria-selected="false" aria-controls="panel-2" id="tab-2" tabindex="0">
-            {{t "attachments.attachments"}}
-            (<strong>{{if this.documentContainer.attachments.length this.documentContainer.attachments.length 0}}</strong>)
-            <span class="au-c-button__tooltip au-c-button__tooltip--top">{{t "attachments.saveAndGo"}}</span>
-          </AuButton>
-        </AuButtonGroup>
-      {{/if}}
-    {{/if}}
     <AuButtonGroup>
-      <AuButton @disabled={{this.saveDocumentTask.isRunning}}
+
+      <AuButton @skin="naked"
+                @disabled={{this.saveDocumentTask.isRunning}}
+        {{on "click" this.closeModal}}>
+        {{t "behandelingVanAgendapunten.cancel"}}
+      </AuButton>
+    </AuButtonGroup>
+    <AuButtonGroup>
+      <AuButton @skin="secondary" @disabled={{this.saveDocumentTask.isRunning}}
         {{on "click" (perform this.saveDocumentTask)}}>
         {{t "behandelingVanAgendapunten.saveButton"}}
       </AuButton>
       <AuButton @disabled={{this.saveDocumentTask.isRunning}} {{on "click" this.saveAndQuit}}>
         {{t "behandelingVanAgendapunten.saveAndQuit"}}
-      </AuButton>
-      <AuButton @skin="secondary"
-                @disabled={{this.saveDocumentTask.isRunning}}
-        {{on "click" this.closeModal}}>
-        {{t "behandelingVanAgendapunten.cancel"}}
       </AuButton>
     </AuButtonGroup>
   </div>
