--- a/app/components/editor-document-title.hbs
+++ b/app/components/editor-document-title.hbs
@@ -4,13 +4,31 @@
   </h1>
 {{else}}
   {{#if this.active}}
-    <div class="au-c-app-chrome__title-group {{if this.error "au-c-input--error"}}">
-      {{#let (unique-id) as |id|}}
-        <AuLabel for={{id}}  class="au-u-hidden-visually">agendapunt titel</AuLabel>
-        <input class="au-c-app-chrome__title-input" placeholder="Naamloos document" id={{id}} type="text" value={{this.title}} {{on "input" this.setTitle}} />
-      {{/let}}
-      <AuButton class="au-c-app-chrome__title-button" {{on "click" this.toggleActive}} @skin="secondary" @icon="check" @hideText={{true}}>Titel aanpassen</AuButton>
-    </div>
+    <form {{on 'submit' this.submit}}>
+      <div class="au-c-app-chrome__title-group {{if this.error "au-c-input--error"}}">
+        {{#let (unique-id) as |id|}}
+          <AuLabel for={{id}} class="au-u-hidden-visually">
+            agendapunt titel
+          </AuLabel>
+          <input 
+            class="au-c-app-chrome__title-input" 
+            placeholder="Naamloos document" 
+            id={{id}} 
+            type="text" 
+            value={{this.title}} 
+            {{on "input" this.setTitle}} 
+            {{did-insert this.focus}}
+          />
+        {{/let}}
+        <AuButton 
+          type="submit" 
+          class="au-c-app-chrome__title-button" 
+          @skin="secondary" 
+          @icon="check" 
+          @hideText={{true}}
+        >Titel aanpassen</AuButton>
+      </div>
+    </form>
   {{else}}
     <h1 class="au-c-app-chrome__title au-c-app-chrome__title--edit">
       {{this.title}} <AuButton {{on "click" this.toggleActive}} @icon="pencil" @skin="tertiary" @hideText={{true}} >titel wijzigen</AuButton>
