unfocus and undo title edit when clicking outside of it

--- a/app/components/app-chrome.hbs
+++ b/app/components/app-chrome.hbs
@@ -48,7 +48,8 @@
         {{/if}}
       </div>
       <EditorDocumentTitle @title={{@editorDocument.title}} @editActive={{@editorDocument.isNew}} 
-        @onChange={{this.updateDocumentTitle}} @onSubmit={{this.saveDocument}} @readOnly={{@readOnly}} />
+        @onChange={{this.updateDocumentTitle}} @onSubmit={{this.saveDocument}}  @onCancel={{this.resetDocument}} 
+        @readOnly={{@readOnly}} />
     </AuToolbarGroup>
     <AuToolbarGroup>
       {{#if @uploading}}
