make sure to confirm route leaving if document is dirty

--- a/app/templates/agendapoints/edit.hbs
+++ b/app/templates/agendapoints/edit.hbs
@@ -64,3 +64,4 @@
     (t "rdfaEditorContainer.saving")}}
   />
 </div>
+<ConfirmRouteLeave @enabled={{this.dirty}} @message={{t "behandelingVanAgendapunten.confirmLeaveWithoutSaving"}}/>
