--- a/app/components/app-chrome.hbs
+++ b/app/components/app-chrome.hbs
@@ -2,11 +2,8 @@
   <div class="au-c-app-chrome">
   <AuToolbar @size="small" class="au-u-padding-bottom-none" as |Group|>
     <Group>
-      <AuLink @route={{@returnRoute}} @model={{@returnModel}} @skin="secondary">
-        <AuIcon @icon="arrow-left" @alignment="left" />
-        {{@returnRouteText}}
-      </AuLink>
-      <span class="au-c-app-chrome__entity">{{this.currentSession.group.classificatie.label}} {{this.currentSession.group.naam}}</span>
+     {{yield to='return-link'}}
+     <span class="au-c-app-chrome__entity">{{this.currentSession.group.classificatie.label}} {{this.currentSession.group.naam}}</span>
     </Group>
     <Group>
       <ul class="au-c-list-horizontal au-u-padding-right-tiny">
@@ -45,7 +42,7 @@
       <EditorDocumentTitle @title={{@editorDocument.title}} @editActive={{@editorDocument.isNew}} @onChange={{this.updateDocumentTitle}} @readOnly={{@readOnly}} />
     </Group>
     <Group>
-      {{yield}}
+      {{yield to="actions"}}
     </Group>
   </AuToolbar>
   </div>
