--- a/app/templates/agendapoints/revisions.hbs
+++ b/app/templates/agendapoints/revisions.hbs
@@ -3,7 +3,7 @@
   @documentContainer={{this.documentContainer}}
 >
   <:return-link>
-  th  <AgendapointBackLink @meetingId={{this.model.returnToMeeting}} />
+    <AgendapointBackLink @meetingId={{this.model.returnToMeeting}} />
   </:return-link>
 
   <:actions>
